# hermesv2

./: .gitignore  INSTALL.md  README.md  config.example.yaml  hermesv2.service  pyproject.toml  requirements.txt  setup.sh
hermesv2/: __init__.py  __main__.py  agent.py  claude_runner.py  cli.py  dashboard.py  doctor.py  learner.py  llm_router.py  memory.py  messages.py  personality.py  scheduler.py  skills_engine.py
hermesv2/gateways/: base.py  cli_gateway.py  discord_gateway.py  telegram_gateway.py  webhook_gateway.py
hermesv2/tools/: file.py  marketplace.py  shell.py  system.py  web.py
personalities/: default.md  s15_hunter.md  vans_streamer.md
skills/: credit_tracker.md  marketplace_monitor.md  s15_hunter.md  stream_helper.md  system_check.md
tests/: test_smoke.py
